Add complete backend service layer with Rainbow Kit wallet authentication
- Implemented wallet-agnostic authentication system supporting MetaMask, Coinbase Wallet, WalletConnect, and other Rainbow Kit compatible wallets
- Created comprehensive service layer with BaseService, UserService, PortfolioService, TransactionService, StrategyService, AgentLogService, InvestAIService, and AuthService
- Added JWT-based authentication middleware with nonce verification for secure wallet signature authentication
- Integrated ethers.js for Ethereum signature verification and address validation
- Created User model with wallet address validation and KYC status tracking
- Added authentication routes supporting signup, login, profile management, and session validation
- Configured environment variables for blockchain integration (Hedera, Ethereum, PYUSD, 1inch, Pyth Network)
- Updated package.json to reflect Rainbow Kit integration instead of MetaMask-specific implementation

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -36,7 +36,9 @@
     "portfolio",
     "ai",
     "ethereum",
-    "metamask"
+    "rainbow-kit",
+    "wagmi",
+    "multi-wallet"
   ],
   "author": "BURP Team",
   "license": "MIT"
