--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,7 +19,10 @@
     "express-rate-limit": "^6.10.0",
     "dotenv": "^16.3.1",
     "bcryptjs": "^2.4.3",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "axios": "^1.5.0",
+    "@1inch/fusion-sdk": "^1.0.0",
+    "@pythnetwork/client": "^2.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
