--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,14 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@langchain/community": "^0.3.56",
+    "@langchain/core": "^0.3.77",
+    "@langchain/groq": "^0.2.4",
+    "@langchain/langgraph": "^0.4.9",
+    "@langchain/openai": "^0.6.13",
+        "dotenv": "^16.3.1",
+    "openai": "^5.23.1",
+    "readline": "^1.3.0",
     "@1inch/fusion-sdk": "^1.0.0",
     "@pythnetwork/client": "^2.15.0",
     "@rainbow-me/rainbowkit": "^2.2.8",
@@ -17,7 +25,6 @@
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "ethers": "^6.7.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
