--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -28,7 +28,7 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRES_IN=7d
 
 # CORS Origins (comma-separated)
-CORS_ORIGIN=http://localhost:3000,http://localhost:5001
+CORS_ORIGIN=http://localhost:3000,https://burp.contactsushil.me
 
 # =================
 # BLOCKCHAIN CONFIG
